# sp_vision_tutorial_26

./: .gitignore  LICENSE  README.md
homework/: CMakeLists.txt  fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
homework_secend/: CMakeCache.txt  CMakeLists.txt  main.cpp
homework_secend/io/: CMakeLists.txt  my_camera.cpp  my_camera.hpp
homework_secend/tasks/: CMakeLists.txt  yolo.hpp
homework_secend/tasks/yolos/: yolov5.cpp
homework_secend/tools/: CMakeLists.txt
lecture1/git/: index_v3.docx  index_v3.txt
lecture2/: CMakeLists.txt
lecture2/part_1/: cpp_basics.cpp  tools.cpp  tools.hpp
lecture2/part_2/: split_channels.cpp
lecture2/part_3/: lightbar_detection..cpp
lecture3/homework/: CMakeLists.txt  main.cpp
lecture3/homework/configs/: camera.yaml  yolo.yaml
lecture3/homework/io/: CMakeLists.txt  camera.cpp  example.cpp
lecture3/homework/tasks/: CMakeLists.txt  armor.hpp  yolo.cpp
lecture3/homework/tasks/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
lecture3/homework/tools/: CMakeLists.txt
lecture3/part1/: answer.cpp
lecture3/part2/: answer.cpp  main.cpp
lecture3/part3/: answer.cpp  main.cpp
lecture3/part4/: answer.cpp
lecture4/answer/: main.cpp
lecture4/class/: CMakeLists.txt
lecture4/class/io/: camera.cpp  camera.hpp
lecture4/class/tasks/: armor.hpp  detector.hpp
lecture4/homework/: CMakeLists.txt
lecture4/homework/io/: CMakeLists.txt  camera.cpp  camera.hpp
lecture4/homework/io/hikrobot/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h  PixelType.h
lecture4/homework/src/: main.cpp  video.cpp
lecture4/homework/tasks/: CMakeLists.txt  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_type.cpp  buff_type.hpp  yolo11_buff.cpp  yolo11_buff.hpp
lecture4/homework/tools/: CMakeLists.txt  img_tools.cpp  img_tools.hpp
lecture4/reprojection/: record.py
lecture5/: main.py
lecture5/aim/: model.py  solver.py
lecture5/sim/: mover.py
lecture5/utils/: ekf.py  math_utils.py  plotter.py
lesson4/class/: CMakeLists.txt
lesson4/class/src/: main.cpp
lesson4/class/tasks/: detector.cpp
lesson4/class/tools/: img_tools.hpp
lesson4/reprojection/: 2024-05-14_10-27-48.txt  config.py  video.py
lesson5/: requirements.txt
lesson5/aim/: tracker.py
lesson5/sim/: camera.py  robot.py
